syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service IncreaseStock {
  rpc handle (IncreaseStockRequest) returns (google.protobuf.Empty);
}

message IncreaseStockRequest {
  string id = 1;
  string idempotencyId = 2;
  int32 increaseStockQuantity = 3;
}